--- a/index.html
+++ b/index.html
@@ -100,30 +100,10 @@
   
   <main>
     <section class="promo">
-      <div class="wrapper">
-        <div class="swiper-container promo__slider">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide promo__slide">
-              <div class="promo__info">
-                <p class="promo__title">Крупнейший производитель беседок</p>
-                <p>Мы гарантируем качество<br>наших товаров</p>
-                <a href="#" class="btn promo__btn">Выбрать беседку</a>
-              </div>
-              <figure class="promo__img">
-                <img src="img/images/slide.png" alt="Slide">
-              </figure>
-            </div>
-            <div class="swiper-slide promo__slide">
-              <div class="promo__info">
-                <p class="promo__title">Крупнейший производитель беседок</p>
-                <p>Мы гарантируем качество<br>наших товаров</p>
-                <a href="#" class="btn promo__btn">Выбрать беседку</a>
-              </div>
-              <figure class="promo__img">
-                <img src="img/images/model.jpg" alt="Slide">
-              </figure>
-            </div>
-            <div class="swiper-slide promo__slide">
+      <div class="swiper-container promo__slider">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide promo__slide">
+            <div class="wrapper promo__wrap">
               <div class="promo__info">
                 <p class="promo__title">Крупнейший производитель беседок</p>
                 <p>Мы гарантируем качество<br>наших товаров</p>
@@ -134,10 +114,36 @@
               </figure>
             </div>
           </div>
-          <div class="swiper-pagination promo__pagination"></div>
-          <div class="swiper-button-prev promo__prev"></div>
-          <div class="swiper-button-next promo__next"></div>
+          <div class="swiper-slide promo__slide">
+            <div class="wrapper promo__wrap">
+              <div class="promo__info">
+                <p class="promo__title">Крупнейший производитель беседок</p>
+                <p>Мы гарантируем качество<br>наших товаров</p>
+                <a href="#" class="btn promo__btn">Выбрать беседку</a>
+              </div>
+              <figure class="promo__img">
+                <img src="img/images/model.jpg" alt="Slide">
+              </figure>
+            </div>
+          </div>
+          <div class="swiper-slide promo__slide">
+            <div class="wrapper promo__wrap">
+              <div class="promo__info">
+                <p class="promo__title">Крупнейший производитель беседок</p>
+                <p>Мы гарантируем качество<br>наших товаров</p>
+                <a href="#" class="btn promo__btn">Выбрать беседку</a>
+              </div>
+              <figure class="promo__img">
+                <img src="img/images/slide.png" alt="Slide">
+              </figure>
+            </div>
+          </div>
         </div>
+        <div class="swiper-button-prev promo__prev"></div>
+        <div class="swiper-button-next promo__next"></div>
+      </div>
+      <div class="wrapper promo__control">
+        <div class="swiper-pagination promo__pagination"></div>
       </div>
     </section>
     
