--- a/index.html
+++ b/index.html
@@ -316,7 +316,31 @@
     <section class="video">
       <div class="wrapper">
         <p class="title title--left">Смотрите видео и готовьте на природе</p>
-        
+        <div class="video__wrap">
+          <div class="video__block video__block--main">
+            <a data-fancybox href="https://www.youtube.com/watch?v=_sI_Ps7JSEk" class="video__link">
+              <img src="img/images/video-1.jpg" alt="видео">
+              <div class="video__overlay"><span>Курица, запеченная с чесночно-базиликовым маслом</span></div>
+              <span class="video__time">2:36</span>
+            </a>
+          </div>
+          <div class="video__right">
+            <div class="video__block">
+              <a data-fancybox href="https://www.youtube.com/watch?v=_sI_Ps7JSEk" class="video__link">
+                <img src="img/images/video-2.jpg" alt="видео">
+                <div class="video__overlay"><span>Курица, запеченная с чесночно-базиликовым маслом</span></div>
+                <span class="video__time">2:36</span>
+              </a>
+            </div>
+            <div class="video__block">
+              <a data-fancybox href="https://www.youtube.com/watch?v=_sI_Ps7JSEk" class="video__link">
+                <img src="img/images/video-3.jpg" alt="видео">
+                <div class="video__overlay"><span>Курица, запеченная с чесночно-базиликовым маслом</span></div>
+                <span class="video__time">2:36</span>
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     
