--- a/index.html
+++ b/index.html
@@ -356,10 +356,14 @@
     
     <section class="diler">
       <div class="wrapper">
-        <p class="subtitle">НАЙТИ БЛИЖАЙШЕГО ДИЛЕРА</p>
-        <p class="title">ИНТЕРАКТИВНАЯ КАРТА ПАРТНЕРОВ ModuleGrill</p>
-        <span class="diler__aside">более 200 дилеров</span>
-        <a href="#" class="btn diler__btn">Найти дилеров</a>
+        <div class="diler__wrap">
+          <div class="diler__title">
+            <p class="subtitle">НАЙТИ БЛИЖАЙШЕГО ДИЛЕРА</p>
+            <p class="title">ИНТЕРАКТИВНАЯ КАРТА ПАРТНЕРОВ ModuleGrill</p>
+            <span class="diler__aside">более 200 дилеров</span>
+          </div>
+          <a href="#" class="btn diler__btn">Найти дилеров</a>
+        </div>
       </div>
     </section>
   </main>
