--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
         <input type="tel" id="tel" class="form__input" placeholder="+7 900 800-70-60" required>
       </div>
       <p class="form__comment">Поля обязательные для ввода <span>*</span></p>
-      <input type="checkbox" id="checkbox" class="form__checkbox">
+      <input type="checkbox" id="checkbox" class="form__checkbox" checked>
       <label for="checkbox" class="form__checkbox-label">Я не робот</label>
       <button type="submit" class="btn form__btn">Заказать звонок</button>
       <p class="form__bottom">Отправляя форму, я даю согласие на <a href="#">обработку персональных данных.</a></p>
