--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
           </ul>
         </div>
         <div class="footer__block footer__block--menu">
-          <p class="footer__title">Каталог</p>
+          <p class="footer__title"><span>Каталог</span></p>
           <ul class="footer__menu">
             <li><a href="#">Беседки</a></li>
             <li><a href="#">Мангалы</a></li>
@@ -394,7 +394,7 @@
           </ul>
         </div>
         <div class="footer__block footer__block--info">
-          <p class="footer__title">Информация</p>
+          <p class="footer__title"><span>Информация</span></p>
           <ul class="footer__menu">
             <li><a href="#">Скидки и акции</a></li>
             <li><a href="#">Гарантии</a></li>
@@ -462,6 +462,7 @@
   </div>
   
   <script src="js/jquery-3.2.1.min.js"></script>
+  <script src="js/script.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.1/jquery.fancybox.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
   <script src="js/blog.js"></script>
