--- a/constructor.html
+++ b/constructor.html
@@ -156,8 +156,8 @@
                 </tr>
               </table>
             </div>
-            <div class="basket__bottom">
-              <p class="basket__itogo">Итого: <span>75 500 руб.</span></p>
+            <div class="construct__bottom">
+              <p class="construct__itogo">Итого: <span>75 500 руб.</span></p>
               <button type="submit" class="btn basket__btn">кУПИТЬ</button>
             </div>
           </div>
